refactor(backend/model): change SftpServer names
